--- a/app/views/shared/_search.html.erb
+++ b/app/views/shared/_search.html.erb
@@ -1,5 +1,6 @@
 <%= button_to "Top Rated Movies", movies_path, params: { top_movies: true }, method: :get, class: "btn btn-outline-primary btn-lg"  %>
 <%= button_to "Top Trending Movies", movies_path, params: { trending_movies: true }, method: :get, class: "btn btn-outline-primary btn-lg"  %>
+<%= button_to "Upcoming Movies", movies_path, params: { upcoming_movies: true }, method: :get, class: "btn btn-outline-primary btn-lg"  %>
 
 <%= form_with url: movies_path, method: :get, local: true do |f| %>
 
