--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -16,6 +16,7 @@
   </div>
 
   <div class="row row-cols-1 row-cols-md-3 mb-5">
+    <section class='movies'>
     <% @movies.each do |movie| %>
       <div class="mb-4 col-md-4">
         <div class="card h-100 border-primary">
@@ -27,6 +28,7 @@
             <p class="card-text"> Vote Average: <%= movie.vote_average %> </p>
             <p class="card-text"><%= movie.overview %></p>
           </div>
+          </section>
           <div class="card-footer d-grid gap-2">
             <%= link_to "View", movie_path(movie.id), class: 'btn btn-outline-primary stretched-link' %>
           </div>
